k8s/resources/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  <APP>
  namespace: <NAMESPACE>
  labels:
    app:  <APP>
spec:
  selector:
    matchLabels:
      app: <APP>
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  <APP>
    spec:
      serviceAccountName: <SERVICE_ACCOUNT>
      # nodeSelector:
      #   dedicated: app
      tolerations:
        - key: <KEY>
          value: <VALUE>
          effect: <EFFECT>
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app: <APP>
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: <KEY>
                    operator: In
                    values:
                      - <VALUE>
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - <APP>
                topologyKey: topology.kubernetes.io/zone
              weight: 100
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - <APP>
                topologyKey: kubernetes.io/hostname
              weight: 99
      readinessGates:
        - conditionType: target-health.alb.ingress.k8s.aws/<APP>_<APP>_8080
      containers:
      - name:  <APP>
        image:  <IMAGE>
        lifecycle:
          preStop:
            exec:
              command: ["sleep", "45"]
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
        livenessProbe:
          tcpSocket:
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 5
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /_status/healthz
            port: 8080
          initialDelaySeconds: 5
          timeoutSeconds: 2
          successThreshold: 1
          failureThreshold: 3
          periodSeconds: 10
        ports:
        - containerPort: 8080
          name:  <APP>
        volumeMounts:
        - name: localtime
          mountPath: /etc/localtime
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
      restartPolicy: Always
