k8s/resources/statefulset.yml

apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: <APP>
  namespace: <NAMESPACE>
  labels:
    app: <APP>
spec:
  serviceName: <APP>-headless
  replicas: 1
  selector:
    matchLabels:
      app: <APP>
  podManagementPolicy: OrderedReady
  updateStrategy:
    type: RollingUpdate
    rollingUpdate:
      partition: 0
  template:
    metadata:
      labels:
        app: <APP>
    spec:
      serviceAccountName: <SERVICE_ACCOUNT>
      terminationGracePeriodSeconds: 60
      tolerations:
        - key: <KEY>
          operator: Equal
          value: <VALUE>
          effect: <EFFECT>
      readinessGates:
        - conditionType: target-health.alb.ingress.k8s.aws/<APP>_<APP>_8080
      containers:
        - name: <APP>
          image: <IMAGE>
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - sleep 45
          resources:
            requests:
              cpu: 100m
              memory: 100Mi
            limits:
              cpu: 100m
              memory: 100Mi
          livenessProbe:
            tcpSocket:
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /_status/healthz
              port: http
            initialDelaySeconds: 5
            timeoutSeconds: 2
            successThreshold: 1
            failureThreshold: 3
            periodSeconds: 10
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: <DATA_MOUNT_PATH>
            - name: localtime
              mountPath: /etc/localtime
              readOnly: true
      volumes:
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/Asia/Seoul
            type: File
      restartPolicy: Always
  volumeClaimTemplates:
    - metadata:
        name: data
        labels:
          app: <APP>
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: <STORAGE_CLASS>
        resources:
          requests:
            storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: <APP>-headless
  namespace: <NAMESPACE>
  labels:
    app: <APP>
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app: <APP>
  ports:
    - name: http
      port: 8080
      targetPort: 8080
